# Chatbot

./: Cargo.toml
src/Chatclient/: main.rs
src/Zentralserver/: main.rs
src/zentralserver/: dataanbin.rs  main.rs
