[package]
name = "Chatbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "*"

[[bin]]
name = "chatclient"
path = "src/Chatclient/main.rs"

[[bin]]
name = "zentralserver"
path = "src/zentralserver/main.rs"

[[bin]]
name = "testfile"
path = "src/Testfile.rs"